Issues fixed: 1. jquery calendar popup now appears on top, it is to do with the z-index, higher is the higher. :-)
2. spring security, now with custom jsp

3. Layout still has issue with styles some how tiles doesn't pick the styles in the begining but later on it works fine (say I do one registration and then login, after that styles work fine).

--- a/ocms/src/main/webapp/resources/css/stylesheet.css
+++ b/ocms/src/main/webapp/resources/css/stylesheet.css
@@ -903,7 +903,7 @@ table.grid td {
 
 div.buttonSubmit {
 	position: relative;
-	z-index:100;
+	z-index:1;
 }
 
 div.buttonSubmit input,div.buttonSubmit span {
